--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     <div class="logo">Thinkfulbnb</div>
     <nav>
       <ul id="menu">
-        <li><a href='#stay'>Stay</a></li>
-        <li><a href='#about'>About</a></li>
-        <li><a href='#ideas'>Ideas</a></li>
-        <li><a href='#host'>Host</a></li>
+        <li><a href="#stay">Stay</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#ideas">Ideas</a></li>
+        <li><a href="#host">Host</a></li>
       </ul>
     </nav>
   </header>
@@ -30,38 +30,35 @@
     <section id="stay">
       <h2>Find the perfect vacation rental</h2>
       <!-- Create a form here -->
-      <div class="group">
+      <form class="vacation-form">
         <div class="item">
-          <form>
-            <div class="item item-double">
-              <label for="location">Location</label>
-              <input id="location" type="text" name="location" placeholder="Search destination" />
-            </div>
-            <div class="item item-double">
-              <label for="arrive">Arrive</label>
-              <input type="date" id="arrive" name="arrive" />
-            </div>
-
-            <div class="item item-double">
-              <label for="depart">Depart </label>
-              <input type="date" id="depart" name="depart" />
-            </div>
-            <div class="item item-double">
-              <label for="type">Type</label>
-              <select name="type" id="type" size="1">
-                <option value="apartment">Apartment</option>
-                <option value="barn">Barn</option>
-                <option value="castle">Castle</option>
-                <option value="houseboat">House boat</option>
-                <option value="tinyhouse">Tiny House</option>
-                <option value="yaht">Yaht</option>
-                <option value="yurt">Yurt</option>
-              </select>
-            </div>
-            <button type="search">Search</button>
-          </form>
+          <label for="location">Location</label>
+          <input id="location" type="text" name="location" required />
         </div>
-      </div>
+        <div class="item">
+          <label for="arrive">Arrive</label>
+          <input id="arrive" type="date" name="arrive" required />
+        </div>
+        <div class="item">
+          <label for="depart">Depart</label>
+          <input id="depart" type="date" name="depart" required />
+        </div>
+        <div class="item">
+          <label for="rentalType">Type</label>
+          <select name="rentalType" id="rentalType" size="1">
+            <option value="apartment">Apartment</option>
+            <option value="barn">Barn</option>
+            <option value="castle">Castle</option>
+            <option value="houseboat">Houseboat</option>
+            <option value="tinyhouse">Tiny House</option>
+            <option value="yacht">Yacht</option>
+            <option value="yurt">Yurt</option>
+          </select>
+        </div>
+        <div class="item">
+          <button type="search">Search</button>
+        </div>
+      </form>
     </section>
 
     <!-- About -->
@@ -74,15 +71,13 @@
         <div class="item">
           <img src="images/vacation-rental-inside-stone.png" alt="Thinkfulbnb - Vacation rental inside stone" />
         </div>
-        <div class="item item-double">
-          <p>
-            Fusce porta odio nunc, eget pretium massa rutrum sit amet. Etiam
-            fringilla aliquam dapibus. Maecenas quis nisi sed turpis aliquam
-            porttitor eget ut quam. Sed vel scelerisque ex. Duis in pharetra
-            neque, at tempus lorem. Aenean mi magna, posuere at quam sed, euismod
-            gravida neque.
-          </p>
-        </div>
+        <p class="item-double">
+          Fusce porta odio nunc, eget pretium massa rutrum sit amet. Etiam
+          fringilla aliquam dapibus. Maecenas quis nisi sed turpis aliquam
+          porttitor eget ut quam. Sed vel scelerisque ex. Duis in pharetra
+          neque, at tempus lorem. Aenean mi magna, posuere at quam sed, euismod
+          gravida neque.
+        </p>
       </div>
     </section>
 
@@ -94,21 +89,13 @@
         <div class="item">
           <h3>Forest retreats</h3>
           <img src="images/forest-retreat.png" alt="Thinkfulbnb - Forest retreat" />
-        </div>
-        <div class="item">
           <h3>Beaches</h3>
           <img src="images/beach-house.png" alt="Thinkfulbnb - Beach house" />
         </div>
-      </div>
-
-
-      <div class="group">
         <div class="item">
           <h3>Rustic cabins</h3>
           <img src="images/cabin.png" alt="Thinkfulbnb - Cabin" />
-        </div>
 
-        <div class="item">
           <h3>Pet-friendly</h3>
           <img src="images/pet-friendly.png" alt="Thinkfulbnb - Pet-friendly" />
         </div>
@@ -139,8 +126,7 @@
           </ul>
         </div>
         <div class="item">
-          <img id="host-image" src="images/become-a-host.png" alt="Thinkfulbnb - Become a host" />
-
+          <img src="images/become-a-host.png" alt="Thinkfulbnb - Become a host" />
         </div>
       </div>
     </section>
